# G-N-Engine

./: .gitignore  Cargo.toml  README.md
crates/gn-core/: Cargo.toml
crates/gn-core/src/: asset.rs  component_display.rs  components.rs  ecs.rs  lib.rs  math.rs
crates/gn-editor/: Cargo.toml
crates/gn-editor/src/: asset_browser.rs  launcher.rs  lib.rs  main.rs  properties.rs  scene_tree.rs  viewport.rs  viewport_renderer.rs
crates/gn-render/: Cargo.toml
crates/gn-render/src/: camera.rs  graphics.rs  lib.rs  lighting.rs  material.rs  mesh.rs  pbr_material.rs  render_queue.rs  render_system.rs  texture_manager.rs  uniform_buffers.rs
crates/gn-render/src/shaders/: basic.wgsl  pbr.wgsl
crates/gn-scripting/: Cargo.toml
crates/gn-scripting/src/: lib.rs  script_engine.rs
examples/: editor_demo.rs  rotating_cube.rs  shader.wgsl  spinning_cube.rs
src/: lib.rs
