[workspace]
members = ["crates/gn-core", "crates/gn-render", "crates/gn-scripting", "crates/gn-editor"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["G-N Studios"]
license = "MIT"

[package]
name = "gn-engine"
version.workspace = true
edition.workspace = true
description = "The Grit and Nails Engine - A 3D game engine written in Rust"

[lib]
path = "src/lib.rs"

[[bin]]
name = "gn-engine"
path = "crates/gn-editor/src/main.rs"

[dependencies]
gn-core = { path = "crates/gn-core" }
gn-render = { path = "crates/gn-render" }
gn-scripting = { path = "crates/gn-scripting" }
gn-editor = { path = "crates/gn-editor" }
iced = "0.12"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1.0", features = ["full"] }
bytemuck = { version = "1.14", features = ["derive"] }
winit = "0.29"
wgpu = "0.19"



