[package]
name = "gn-editor"
version.workspace = true
edition.workspace = true
description = "G&N Engine editor - Iced-based GUI"

[[bin]]
name = "gn-editor"
path = "src/main.rs"

[dependencies]
iced = { version = "0.12", features = ["canvas"] }
gn-core = { path = "../gn-core" }
gn-render = { path = "../gn-render" }
gn-scripting = { path = "../gn-scripting" }
log = "0.4"
env_logger = "0.11"
pollster = "0.3"

[dev-dependencies]
