[package]
name = "gn-scripting"
version.workspace = true
edition.workspace = true
description = "G&N Engine scripting - Lua integration"

[dependencies]
mlua = { version = "0.9", features = ["lua54", "vendored"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
gn-core = { path = "../gn-core" }

[dev-dependencies]
